// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`final-comments GET /lpa-questionnaire/1/add-documents/:folderId/:documentId should render a document upload page with a file upload component 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds top-errors-hook"></div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Supporting documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <div class="govuk-grid-row pins-file-upload" data-next-page-url="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/add-document-details/1/1"
            data-form-id="1" data-case-id="2" data-case-reference="APP/Q9999/D/21/351062"
            data-folder-id="2864" data-document-type="changedDescription" data-document-stage="appellant-case"
            data-blob-storage-host="https://127.0.0.1:10000/devstoreaccount1" data-blob-storage-container="document-service-uploads"
            data-document-id="1" data-allowed-types="application/pdf" data-formatted-allowed-types="PDF">
                <form method="POST" novalidate="novalidate" class="govuk-grid-column-two-thirds"
                data-filenames-in-folder="WyJ0ZXN0LXBkZi1kb2N1bWVudEZvbGRlckluZm8ucGRmIiwic2FtcGxlLTIwcy1kb2N1bWVudEZvbGRlckluZm8ubXA0IiwicGgwLWRvY3VtZW50Rm9sZGVySW5mby5qcGVnIiwicGgxLWRvY3VtZW50Rm9sZGVySW5mby5qcGVnIl0=">
                    <div class="pins-file-upload__container">
                        <div class="govuk-body pins-file-upload__instructions"><span>The file must be a PDF and smaller than 100MB.</span>
                        </div>
                        <div class="middle-errors-hook">
                            <h2 class="pins-file-upload__container-title">Upload supporting documents</h2>
                            <div class="pins-file-upload__upload">
                                <input class="display--none" id="upload-file-1" accept="application/pdf"
                                type="file" name="files" value="Choose file" aria-controls="file-list-1">
                                <div>
                                    <button type='button' class="pins-file-upload__button govuk-button--secondary"
                                    data-cy="upload-file-button" id="upload-file-button-1">Choose file</button><span class='govuk-body pins-file-upload__dropzone-text'>or drop file</span>
                                </div>
                            </div>
                            <div id="file-list-1">
                                <h2 class="display--sr-only" id="file-list-title-1">List of files to upload</h2>
                                <ul class="pins-file-upload__files-rows" aria-describedby="file-list-title-1"
                                aria-live="polite"></ul>
                            </div>
                        </div>
                    </div>
                    <div class="display--flex">
                        <button type="submit" class="govuk-button pins-file-upload__submit" data-module="govuk-button"
                        id="submit-button-1">Continue</button>
                        <div class="progress-hook"></div>
                    </div>
                </form>
            </div>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /manage-documents/:folderId/ should render a 404 error page if the folderId is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body">If the web address is correct or you selected a link or button, <a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">report an IT problem.</a>
                </p>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /manage-documents/:folderId/ should render manage folder page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage folder</span>
            <h1 class="govuk-heading-l">Supporting documents</h1>
        </div>
    </div><a href="/appeals-service/appeal-details/2/final-comments/lpa/add-document"
    role="button" draggable="false" class="govuk-button govuk-button--secondary"
    data-module="govuk-button"> Add document</a>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table" id="documents-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Name</th>
                        <th scope="col" class="govuk-table__header">Date submitted</th>
                        <th scope="col" class="govuk-table__header">Redaction status</th>
                        <th scope="col" class="govuk-table__header">Actions</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/1/download/15d19184-155b-4b6c-bba6-2bd2a61ca9a3/test-pdf-documentFolderInfo.pdf"
                                target="_blank">test-pdf-documentFolderInfo.pdf</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>PDF, 129 KB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">1 February 2023</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/1/15d19184-155b-4b6c-bba6-2bd2a61ca9a3"
                            class="govuk-link">View and edit <span class="govuk-visually-hidden">test-pdf-documentFolderInfo.pdf</span></a>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/1/download/47d8f073-c837-4f07-9161-c1a5626eba56/sample-20s-documentFolderInfo.mp4"
                                target="_blank">sample-20s-documentFolderInfo.mp4</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>MP4, 11.8 MB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">2 March 2024</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/1/47d8f073-c837-4f07-9161-c1a5626eba56"
                            class="govuk-link">View and edit <span class="govuk-visually-hidden">sample-20s-documentFolderInfo.mp4</span></a>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /manage-documents/:folderId/:documentId should render a 404 error page if the folderId is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body">If the web address is correct or you selected a link or button, <a href="https://intranet.planninginspectorate.gov.uk/task/report-it-problem/"
                class="govuk-link">report an IT problem.</a>
                </p>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /manage-documents/:folderId/:documentId should render manage document page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
            <div class="govuk-notification-banner govuk-!-margin-bottom-5" role="region"
            aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <h1 class="govuk-notification-banner__heading govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0">Virus scan in progress</h1><a class="govuk-notification-banner__link" href="" data-cy="refresh-page">Refresh page to see if scan has finished</a>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage versions</span>
            <h1 class="govuk-heading-l">test-pdf-documentFileVersionsInfo.pdf</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Name</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="govuk-!-margin-bottom-2"><span class="govuk-body">test-pdf-documentFileVersionsInfo.pdf</span>
                        </div>
                        <div class="govuk-!-margin-bottom-1"><strong class="govuk-tag govuk-tag--yellow">Virus scanning</strong>
                        </div>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/change-document-name/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf name</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Version</dt>
                    <dd class="govuk-summary-list__value">1</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date submitted</dt>
                    <dd class="govuk-summary-list__value">1 February 2023</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/change-document-details/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf date received</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Redaction status</dt>
                    <dd class="govuk-summary-list__value">Redacted</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/change-document-details/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf redaction status</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <h2>Document versions</h2>
            <p class="govuk-body">View and remove versions of this document</p>
            <details class="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Version history</span>
                </summary>
                <div class="govuk-details__text">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Version</th>
                                <th scope="col" class="govuk-table__header">Name</th>
                                <th scope="col" class="govuk-table__header">Activity</th>
                                <th scope="col" class="govuk-table__header">Redaction status</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">1</td>
                                <td class="govuk-table__cell">
                                    <div class="govuk-!-margin-bottom-2"><span class="govuk-body">test-pdf-documentFileVersionsInfo.pdf</span>
                                    </div><strong class="govuk-tag govuk-tag--blue single-line govuk-!-margin-bottom-2">Current version</strong>
                                    <div                                     class="govuk-!-margin-bottom-2"><strong class="govuk-tag govuk-tag--yellow">Virus scanning</strong>
                </div>
                </td>
                <td class="govuk-table__cell">
                    <p class="govuk-body"><strong>Create</strong>: 13:14, 31 October 2023,
                        <br>by John Smith</p>
                </td>
                <td class="govuk-table__cell">Redacted</td>
                <td class="govuk-table__cell"></td>
                </tr>
                </tbody>
                </table>
        </div>
        </details>
    </div>
    </div>
</main>"
`;

exports[`final-comments GET /manage-documents/:folderId/:documentId/:versionId/delete should render the delete document page with the expected content when there is a single document version 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage versions</span>
            <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Are you sure you want to remove this version?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Name</dt>
                    <dd class="govuk-summary-list__value">test-pdf-documentFileVersionsInfo.pdf</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Version</dt>
                    <dd class="govuk-summary-list__value">1</dd>
                </div>
            </dl>
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Removing the only version
                    of a document will delete the document from the case</strong>
            </div>
            <form method="POST">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="delete-file-answer" name="delete-file-answer"
                            type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="delete-file-answer">Yes</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="delete-file-answer-2" name="delete-file-answer"
                            type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="delete-file-answer-2">No</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button"
                id="remove-document-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /review-comments with data should render review LPA final comments page with the provided comments details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review LPA final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Awaiting final comments review</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value"><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                        target="_blank">blank copy 5.pdf</a>
                    </dd>
                    <dd class="govuk-summary-list__actions">
                        <ul class="govuk-summary-list__actions-list">
                            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/135568">Manage<span class="govuk-visually-hidden"> supporting documents</span></a>
                            </li>
                            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                            </li>
                        </ul>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /review-comments with data should render review appellant final comments page with no redact & accept option when no representation text 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review appellant final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="text"></div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /review-comments with data should render review appellant final comments page with the provided comments details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review appellant final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Awaiting final comments review</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET /review-comments with redacted comment should render the redacted comment summary list row value inside a show-more component, if there is a redacted version of the comment 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review appellant final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Original final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Awaiting final comments review</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Redacted comment</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</div>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/redact">Change<span class="govuk-visually-hidden"> final comments</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET change-document-details/:folderId/:documentId should render change document details page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Change document details</span>
            <h1 class="govuk-heading-l">Appellant costs application documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">ph0-documentFileInfo.jpeg</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="items[0][documentId]" name="items[0][documentId]"
                        type="hidden" value="d51f408c-7c6f-4f49-bcc0-abbb5bea3be6">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items-0-received-date-day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                        id="items-0-received-date-day" name="items[0][receivedDate]-[day]" type="text"
                                        value="11" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items-0-received-date-month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                        id="items-0-received-date-month" name="items[0][receivedDate]-[month]"
                                        type="text" value="10" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items-0-received-date-year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                        id="items-0-received-date-year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2023" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments GET change-document-name/:folderId/:documentId should render change document page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Change document details</span>
            <h1 class="govuk-heading-l">Appellant costs application documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">ph0-documentFileInfo</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="documentId" name="documentId" type="hidden"
                        value="d51f408c-7c6f-4f49-bcc0-abbb5bea3be6">
                    </div>
                    <div class="govuk-form-group">
                        <label class="govuk-label govuk-caption-m govuk-!-margin-bottom-3" for="file-name">File name</label>
                        <input class="govuk-input" id="file-name" name="fileName"
                        type="text" value="ph0-documentFileInfo">
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments POST /review-comments with data should render review LPA final comments page with error if no option is selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#status">Select the outcome of your review</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review LPA final comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Final comments</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Awaiting final comments review</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value"><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                        target="_blank">blank copy 5.pdf</a>
                    </dd>
                    <dd class="govuk-summary-list__actions">
                        <ul class="govuk-summary-list__actions-list">
                            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/manage-documents/135568">Manage<span class="govuk-visually-hidden"> supporting documents</span></a>
                            </li>
                            <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="/appeals-service/appeal-details/2/final-comments/lpa/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                            </li>
                        </ul>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="valid_requires_redaction">
                                <label class="govuk-label govuk-radios__label" for="status-2">Redact and accept final comments</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-3" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-3">Reject final comments</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`final-comments should render the delete document page with the expected content should render a document upload page with a file upload component 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage versions</span>
            <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Are you sure you want to remove this version?</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Name</dt>
                    <dd class="govuk-summary-list__value">test-pdf-documentFileVersionsInfo.pdf</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Version</dt>
                    <dd class="govuk-summary-list__value">1</dd>
                </div>
            </dl>
            <div class="govuk-warning-text"><span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                <strong                 class="govuk-warning-text__text"><span class="govuk-visually-hidden">Warning</span> Removing the only version
                    of a document will delete the document from the case</strong>
            </div>
            <form method="POST">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="delete-file-answer" name="delete-file-answer"
                            type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="delete-file-answer">Yes</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="delete-file-answer-2" name="delete-file-answer"
                            type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="delete-file-answer-2">No</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button"
                id="remove-document-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
